# caiculator

./: Cargo.toml  README.md
src/: caiculator.rs  main.rs  ollama.rs
