[package]
name = "caiculator"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fazibear/caiculator"
description = "Calculator powered by AI"

[dependencies]
anyhow = "1.0"
ollama-rs = "0.3.1"
iced = {version = "0.13", features = ["tokio", "advanced"]}
tokio = {version = "1.45", features = ["full"]}
